sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:7: error: not found: value ecart
  for (i<- ecart-1 to n-1) {
           ^